sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: not found: value getnombreValeurs
  val lgr = getnombreValeurs()
            ^